--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
 		"prettier/prettier": 2,
 		"no-useless-escape": 0,
 		"no-use-before-define": "off",
-		"no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+		"no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+		"@typescript-eslint/explicit-module-boundary-types": "off"
 	},
 	"settings": {
 		"import/resolver": {
