--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@types/node": "^14.0.5",
 		"@types/uuid": "^8.0.0",
 		"body-parser": "^1.19.0",
+		"class-transformer": "^0.2.3",
+		"class-validator": "^0.12.2",
 		"dotenv": "^8.2.0",
 		"envalid": "^6.0.1",
 		"express": "^4.17.1",
