--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,12 @@
 		"allowJs": true,
 		"outDir": "build",
 		"rootDir": "src",
-		"strict": true,
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"experimentalDecorators": true,
+		"strictPropertyInitialization": false,
+		"emitDecoratorMetadata": true
 	},
 	"include": [
 		"src/**/*"
