--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@types/body-parser": "^1.19.0",
 		"@types/express": "^4.17.6",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.0.5",
 		"@types/uuid": "^8.0.0",
 		"body-parser": "^1.19.0",
@@ -17,6 +18,7 @@
 		"dotenv": "^8.2.0",
 		"envalid": "^6.0.1",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.16",
 		"ts-node": "^8.10.1",
 		"typescript": "^3.9.3",
