--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"resolveJsonModule": true,
 		"experimentalDecorators": true,
 		"strictPropertyInitialization": false,
-		"emitDecoratorMetadata": true
+		"emitDecoratorMetadata": true,
+		"strict": true
 	},
 	"include": [
 		"src/**/*"
