--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 		"dev": "nodemon --watch './src/**/*.ts' --exec ts-node ./src/server/server.ts"
 	},
 	"dependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/express": "^4.17.6",
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.0.5",
+		"@types/passport": "^1.0.3",
 		"@types/uuid": "^8.0.0",
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.12.2",
@@ -20,6 +23,7 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.16",
+		"passport": "^0.4.1",
 		"ts-node": "^8.10.1",
 		"typescript": "^3.9.3",
 		"uuid": "^8.1.0"
