--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon --watch './src/**/*.ts' --exec ts-node ./src/server/server.ts"
+		"dev": "nodemon --watch './src/**/*.ts' --exec ts-node ./src/server.ts"
 	},
 	"dependencies": {
 		"@types/bcrypt": "^3.0.0",
